--- a/styles/mycss.css
+++ b/styles/mycss.css
@@ -3,9 +3,9 @@
 body {
 	font-family: Poppins, serif;
      	background: #ffffff;
-	background: -webkit-radial-gradient(ellipse farthest-side at center center, #ffffff 0%, #dcdcdc 100%);
-	background: -moz-radial-gradient(ellipse farthest-side at center center, #ffffff 0%, #dcdcdc 100%);
-	background: radial-gradient(ellipse farthest-side at center center, #ffffff 0%, #dcdcdc 100%);
+	background: -webkit-radial-gradient(ellipse farthest-side at center center, #ffffff 0%, #fafaf5 50%, #e3e3e3 100%);
+	background: -moz-radial-gradient(ellipse farthest-side at center center, #ffffff 0%, #fafaf5 50%, #e3e3e3 100%);
+	background: radial-gradient(ellipse farthest-side at center center, #ffffff 0%, #fafaf5 50%, #e3e3e3 100%);
    
 }
 
