--- a/styles/mycss.css
+++ b/styles/mycss.css
@@ -17,7 +17,7 @@ font-style: normal;
 }
 
 .nav-link {
-    color: aquamarine;
+    color: rgb(53, 58, 57);
 }
 
 .navbar-nav .nav-link.active {
@@ -34,7 +34,10 @@ font-style: normal;
 
 .sidebar {
     color: rgb(112, 136, 128);
-    background: linear-gradient(270deg, #13ec7c 0%, #ffffff 99%);
+    background: #ffffff;
+	background: -webkit-linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #e3e3e3 100%);
+	background: -moz-linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #e3e3e3 100%);
+	background: linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #e3e3e3 100%);
 }
 
 
@@ -45,6 +48,10 @@ font-style: normal;
   }
 
 .card a{
+    text-decoration: None;
+}
+
+button a{
     text-decoration: None;
 }
 
