--- a/styles/mycss.css
+++ b/styles/mycss.css
@@ -17,7 +17,7 @@ font-style: normal;
 }
 
 .nav-link {
-	font-family: Poppins,
+	font-family: Poppins, serif;
     color: rgb(53, 58, 57);
 }
 
@@ -46,10 +46,12 @@ font-style: normal;
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-style: normal;
+	color: rgb(53, 58, 57);
   }
 
 .card a{
     text-decoration: None;
+color: rgb(53, 58, 57);
 }
 
 button a{
