--- a/styles/mycss.css
+++ b/styles/mycss.css
@@ -59,6 +59,16 @@ font-style: normal;
 	border-top: #6e6e6e;
 }
 
+.btn btn-primary {
+	text-decoration: None;
+	color: rgb(53, 58, 57);
+	background: #ffffff;
+	background: -webkit-linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #e3e3e3 100%);
+	background: -moz-linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #e3e3e3 100%);
+	background: linear-gradient(to bottom, #ffffff 0%, #f5f5f5 50%, #e3e3e3 100%);
+	border-top: #6e6e6e;
+}
+
 button a{
     text-decoration: None;
 	color: rgb(53, 58, 57);
